deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-demo2-deployment
  labels:
    app: java-demo2
  namespace: quiz3
spec:
  replicas: 3
  selector:
    matchLabels:
      app: java-demo2
  template:
    metadata:
      labels:
        app: java-demo2
    spec:
      containers:
      - name: java-demo2
        image: 739164536378.dkr.ecr.us-east-1.amazonaws.com/java-demo2:latest
        ports:
        - containerPort: 8080
