service.yml
apiVersion: v1
kind: Service
metadata:
  name: java-demo2
  labels:
    app: java-demo2
  namespace: quiz3
spec:
  selector:
    app: java-demo2
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
