ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: java-demo2-ingress
  labels:
    app: java-demo2
  namespace: quiz3
spec:
  rules:
  - host: ec2-18-207-0-7.compute-1.amazonaws.com
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: java-demo2
            port:
              number: 8080
